...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="stars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="mXN-yn-YJj">
                                                <rect key="frame" x="0.0" y="35" width="37.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="watchers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="S3c-Cx-Aei">
                                                <rect key="frame" x="0.0" y="35" width="69.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="open issues" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="ox6-bX-sp6">
                                                <rect key="frame" x="0.0" y="35" width="90.5" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="forks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Gag-Zn-JzV">
                                                <rect key="frame" x="0.0" y="35" width="38" height="30"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="言語" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lKb-sd-BYw">
                                        <rect key="frame" x="169.5" y="0.0" width="35" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="language"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="例：これはSwiftの学習リポジトリです。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JTm-Q7-ge8">
                                        <rect key="frame" x="29" y="28.5" width="316" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="description"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Ou-Nv-mvK">
                                        <rect key="frame" x="72" y="57" width="230.5" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="showMoreButton"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title=" GitHubページで詳しく見てみる"/>
...
